# ROS2_Cpp_Python

./: .gitignore  README.md
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/src/: listener_node.cpp  simple_node.cpp  sum_client.cpp  sum_server.cpp  talker_node.cpp
src/cpp_py_pkg/: CMakeLists.txt  package.xml
src/cpp_py_pkg/src/: simple_node.cpp
src/log/: latest_build
src/py_actions/: package.xml  setup.py
src/py_actions/py_actions/: fibonacci_client.py  fibonacci_client_cancel.py  fibonacci_client_feedback.py  fibonacci_server.py  fibonacci_server_cancel.py  fibonacci_server_feedback.py
src/py_pkg/: package.xml  setup.py
src/py_pkg/py_pkg/: listener.py  talker.py  (+3 more)
src/ros2_ws_bringup/: CMakeLists.txt  package.xml
src/ros2_ws_description/: CMakeLists.txt  package.xml
src/ros2_ws_interface/: CMakeLists.txt  README.MD  package.xml
src/ros2_ws_interface/install/: local_setup.sh  setup.sh
src/ros2_ws_interface/install/ros2_ws_interface/include/ros2_ws_interface/ros2_ws_interface/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  student.h  student.hpp
src/ros2_ws_interface/install/ros2_ws_interface/include/ros2_ws_interface/ros2_ws_interface/msg/detail/: student__builder.hpp  student__functions.c  student__rosidl_typesupport_fastrtps_c.h  student__rosidl_typesupport_fastrtps_cpp.hpp  student__struct.h
src/ros2_ws_interface/install/ros2_ws_interface/include/ros2_ws_interface/ros2_ws_interface/srv/detail/: grade_point_average__functions.h  grade_point_average__rosidl_typesupport_fastrtps_cpp.hpp  grade_point_average__struct.h  grade_point_average__struct.hpp  grade_point_average__type_support.c  grade_point_average__type_support.cpp  grade_point_average__type_support.h
src/ros2_ws_interface/install/ros2_ws_interface/local/lib/python3.10/dist-packages/ros2_ws_interface/: _ros2_ws_interface_s.ep.rosidl_typesupport_fastrtps_c.c
src/ros2_ws_interface/install/ros2_ws_interface/local/lib/python3.10/dist-packages/ros2_ws_interface-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ros2_ws_interface/install/ros2_ws_interface/local/lib/python3.10/dist-packages/ros2_ws_interface/msg/: __init__.py  _student_s.c
src/ros2_ws_interface/install/ros2_ws_interface/local/lib/python3.10/dist-packages/ros2_ws_interface/srv/: __init__.py  _grade_point_average_s.c
src/ros2_ws_interface/install/ros2_ws_interface/share/ament_index/resource_index/parent_prefix_path/: ros2_ws_interface
src/ros2_ws_interface/install/ros2_ws_interface/share/ros2_ws_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ros2_ws_interface/install/ros2_ws_interface/share/ros2_ws_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_ros2_ws_interface__rosidl_generator_cExport.cmake  export_ros2_ws_interface__rosidl_generator_cppExport.cmake  export_ros2_ws_interface__rosidl_generator_pyExport-noconfig.cmake  export_ros2_ws_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  ros2_ws_interfaceConfig.cmake  ros2_ws_interface__rosidl_typesupport_cExport.cmake  ros2_ws_interface__rosidl_typesupport_cppExport-noconfig.cmake  ros2_ws_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros2_ws_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
src/ros2_ws_interface/install/ros2_ws_interface/share/ros2_ws_interface/msg/: Student.idl
src/ros2_ws_interface/install/ros2_ws_interface/share/ros2_ws_interface/rust/src/: srv.rs
src/ros2_ws_interface/install/ros2_ws_interface/share/ros2_ws_interface/srv/: GradePointAverage.idl
src/ros2_ws_interface/log/: latest_build
(+7 files in other folders)
